# mini-blog-fastpi-python

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 80435736d713_add_initial_tables.py
src/: config.py  database.py  exceptions.py  main.py  security.py
src/controllers/: post.py
src/models/: post.py
src/schemas/: post.py
src/services/: post.py
src/views/: post.py
tests/: conftest.py
tests/integration/auth/: test_login.py
tests/integration/post/: test_create_post.py  test_delete_post.py  test_read_all.py  test_read_post.py  test_update_post.py
